test_fixtures/if/fun_in_then.lox
// ParserError: UnexpectedExpressionToken found Fun from l2c11 to l2c14
if (true) fun foo() {}
